@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="generator" content="Docutils 0.7: http://docutils.sourceforge.net/" />
+<meta name="generator" content="Docutils 0.8.1: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="$Date$" />
+<meta name="date" content="2011-09-21" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>$Date$</td></tr>
+<td>2011-09-21</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.21</td></tr>
 </tbody>
@@ -2216,7 +2216,7 @@ defaults automatically for convenience.</dd>
 </div>
 <div class="section" id="interface-preferences">
 <h3><a class="toc-backref" href="#id93">Interface preferences</a></h3>
-<img alt="./images/pref_dialog_interface.png" src="./images/pref_dialog_interface.png" />
+<img alt="./images/pref_dialog_interface_interface.png" src="./images/pref_dialog_interface_interface.png" />
 <div class="section" id="sidebar">
 <h4><a class="toc-backref" href="#id94">Sidebar</a></h4>
 <dl class="docutils">
@@ -2256,6 +2256,7 @@ modifications were done, the file encoding, the filetype and other information.<
 </div>
 <div class="section" id="interface-notebook-tab-preferences">
 <h3><a class="toc-backref" href="#id97">Interface Notebook tab preferences</a></h3>
+<img alt="./images/pref_dialog_interface_notebook.png" src="./images/pref_dialog_interface_notebook.png" />
 <div class="section" id="editor-tabs">
 <h4><a class="toc-backref" href="#id98">Editor tabs</a></h4>
 <dl class="docutils">
@@ -2294,7 +2295,7 @@ right, left, top, or bottom of the message window.</dd>
 <div class="section" id="interface-toolbar-preferences">
 <h3><a class="toc-backref" href="#id100">Interface Toolbar preferences</a></h3>
 <p>Affects the main toolbar underneath the menu bar.</p>
-<img alt="./images/pref_dialog_toolbar.png" src="./images/pref_dialog_toolbar.png" />
+<img alt="./images/pref_dialog_interface_toolbar.png" src="./images/pref_dialog_interface_toolbar.png" />
 <div class="section" id="toolbar">
 <h4><a class="toc-backref" href="#id101">Toolbar</a></h4>
 <dl class="docutils">
@@ -2910,7 +2911,7 @@ to true.</td>
 <td>Defines the mode how Geany saves files to
 disk. If disabled, Geany directly writes
 the content of the document to disk. This
-might cause in loss of data when there is
+might cause loss of data when there is
 no more free space on disk to save the
 file. When set to true, Geany first saves
 the contents into a temporary file and if
@@ -6647,7 +6648,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2011-09-12 23:10 UTC.
+Generated on: 2011-10-01 10:43 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
